After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752761 - GtkMenu: Properly detach menu when the window is detached
GtkMenu: Properly detach menu when the window is detached
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkMenu
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks: 752208
 
 
Reported: 2015-07-23 06:52 UTC by Jonas Ådahl
Modified: 2015-07-26 05:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkMenu: Properly detach menu when the window is detached (2.65 KB, patch)
2015-07-23 06:52 UTC, Jonas Ådahl
committed Details | Review

Description Jonas Ådahl 2015-07-23 06:52:27 UTC
Without properly cleaning up GtkMenu private attach state
(GtkMenuAttachData) when the attached widget is freed, we would end up
with an invalid pointer to a freed widget. Trying to detach from that
widget would cause a segmentation fault.
Comment 1 Jonas Ådahl 2015-07-23 06:52:31 UTC
Created attachment 307967 [details] [review]
GtkMenu: Properly detach menu when the window is detached
Comment 2 Matthias Clasen 2015-07-23 17:22:50 UTC
Review of attachment 307967 [details] [review]:

Looks plausible.
Comment 3 Matthias Clasen 2015-07-26 05:57:46 UTC
Attachment 307967 [details] pushed as 955c1c7 - GtkMenu: Properly detach menu when the window is detached